--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div>
-    <app-navbar></app-navbar>
-    <router-outlet></router-outlet>
-    <app-login></app-login>
+    <!-- <app-navbar></app-navbar>
+    <app-sidebar></app-sidebar>
+    <app-login></app-login> -->
+    <router-outlet></router-outlet> 
 
 </div>
