--- a/src/app/Components/sidebar/sidebar.component.css
+++ b/src/app/Components/sidebar/sidebar.component.css
@@ -33,6 +33,8 @@ body{
    font-family: "Rubik";
    letter-spacing: 2px;
    margin-left: 20px;
+   border-radius: 1em;
+   margin-right: 30px;
 }
 a.nav-link.active{
     margin-right: 30px;
@@ -40,6 +42,13 @@ a.nav-link.active{
     border-radius: 1em;
     background-color: blue;
 }
+a:hover{
+   margin-right: 30px;
+   color: white;
+   border-radius: 1em;
+   background-color: blue;
+}
+
 a.nav-link{
     color:white;
 }
