--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
     <h1>USER NAME</h1>
-        <a class="nav-link" routerLink="/dashboard/home" routerLinkActive="active" >Home</a>
-    <a class="nav-link" routerLink="/home" routerLinkActive="active">About</a>
+        <a class="nav-link" routerLink="/home/dashboard" routerLinkActive="active" >Dashboard</a>
+    <a class="nav-link" routerLink="/0" routerLinkActive="active">About</a>
     <a class="nav-link" routerLink="/1" routerLinkActive="active">Portfolio</a>
     <a class="nav-link" routerLink="/2" routerLinkActive="active">Gallery</a>
     <a class="nav-link" routerLink="/3" routerLinkActive="active">Service</a>
