--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,2 +1,6 @@
-<p>home works!</p>
-<!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consectetur, natus rem obcaecati perferendis voluptatibus? Laborum quasi corrupti, optio eaque enim tempora repudiandae consequuntur, necessitatibus architecto voluptates molestiae obcaecati aperiam? -->
+
+<app-sidebar></app-sidebar>
+
+<div class="main">
+    <router-outlet></router-outlet>
+</div>
