--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -1,1 +1,3 @@
 <p>dashboard works!</p>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore eum delectus incidunt, at asperiores voluptate reprehenderit quisquam eveniet ex reiciendis beatae, corporis aperiam nisi sunt animi, ducimus facere. Deserunt, eius?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nam voluptate alias? Facere iure laboriosam deserunt. Quis voluptate repellat, nihil debitis alias cupiditate corrupti distinctio sapiente ipsam in vitae vel.
