--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,10 +1,12 @@
 <div class="sidebar">
+    <img class="img" src="assets/images/user-logo.png"/>
     <h1>USER NAME</h1>
         <a class="nav-link" routerLink="/home/dashboard" routerLinkActive="active" >Dashboard</a>
-    <a class="nav-link" routerLink="/0" routerLinkActive="active">About</a>
-    <a class="nav-link" routerLink="/1" routerLinkActive="active">Portfolio</a>
-    <a class="nav-link" routerLink="/2" routerLinkActive="active">Gallery</a>
-    <a class="nav-link" routerLink="/3" routerLinkActive="active">Service</a>
-    <a class="nav-link" routerLink="/4" routerLinkActive="active">Join</a>
-    <a class="nav-link" routerLink="/5" routerLinkActive="active">Contact</a>
+    <a class="nav-link" routerLink="/home/apply" routerLinkActive="active">Apply</a>
+    <a class="nav-link" routerLink="/home/history" routerLinkActive="active">History</a>
+    <a class="nav-link" routerLink="/home/emi-calculator" routerLinkActive="active">EMI Calculator</a>
+    <div class="logout">
+        <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+            true}">Logout</a>
+    </div>
  </div>
