--- a/src/app/Components/calc/calc.component.css
+++ b/src/app/Components/calc/calc.component.css
@@ -5,3 +5,38 @@ h1{
 .content{
     margin: 50px;
 }
+.example-h2 {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  
+  .example-margin {
+    margin: 8px;
+  }
+   
+  .mat-mdc-slider {
+    max-width: 300px;
+    width: 100%;
+  }
+  
+  .mat-mdc-card + .mat-mdc-card {
+    margin-top: 8px;
+  }
+  
+  .example-result-card h2 {
+    margin: 0 8px;
+  }
+  
+  .example-label-container {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 10px 0;
+    max-width: 284px;
+  }
+  
+  .example-result-card .example-value-label {
+    font-weight: 600;
+  }
+  
+  
