--- a/src/app/Components/calc/calc.component.css
+++ b/src/app/Components/calc/calc.component.css
@@ -4,6 +4,7 @@ h1{
 }
 .content{
     margin: 50px;
+    width: 500px;
 }
 .example-h2 {
     margin-left: 10px;
@@ -13,6 +14,7 @@ h1{
   
   .example-margin {
     margin: 8px;
+    width: 300px;
   }
    
   .mat-mdc-slider {
@@ -39,4 +41,10 @@ h1{
     font-weight: 600;
   }
   
-  
+  .form-control{
+    width: 300px;
+  }
+  .example-value-label{
+    position: absolute;
+    right: 100px;
+  }
